# application

./: .gitignore  README.md  flake.nix
backend/: Cargo.toml
backend/src/: main.rs
frontend/src/: Main.elm
