[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server, async and logging
axum = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["cors"] }
